feat: Phase 4 — interactive enhancements
4.1: Global search (Ctrl+K) with keyboard navigation, overlay dialog
4.2: Nested comment replies (parent_id + recursive DTO, reply form)
4.3: Newsletter signup (Buttondown API + external form fallback)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>